--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <div class="header_area_text">
                     <h2 class="wow slideInDown" data-wow-duration="1.5s">We’re here waiting for you</h2>
                     <p class="wow slideInUp">You can be a job seeker or you can be a recruiter. We provide a convenient and quick way to apply for candidates. We provide an efficient and convenient platform for recruiters. Here are some things you want to achieve. Welcome to here. Please enjoy yourself  !</p>
-                    <a id="same-to-all-jobs" class="wow slideInUp" data-wow-duration="1.5s" href="JavaScript:void(0);">ENJOY NOW</a>
+                    <a id="same-to-all-jobs" class="wow slideInUp" data-wow-duration="1.5s" href="#jobs">ENJOY NOW</a>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 col-sm-2">
@@ -121,12 +121,12 @@
     <div class="container">
         <!--jobs标题头-->
         <div class="job-header">
-            <h5>Jobs</h5>
+            <h1>Jobs</h1>
         </div>
         <!--jobs筛选选项-->
         <div class="choice">
             <div class="choice-box">
-                <div class="choice-box-left"><p>TYPE \ <span class="alreadyType"></span></p>
+                <div class="choice-box-left"><p><span class="choice-of-type">TYPE \ </span><span class="alreadyType"></span></p>
                     <div class="btn-toolbar" role="toolbar">
                         <div class="btn-group" id="type">
                             <!--development/designer/marketing/product manager-->
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="choice-box-center"></div>
-                <div class="choice-box-right"><p>CATEGORY \ <span class="alreadyCategory"></span></p>
+                <div class="choice-box-right"><p><span class="choice-of-category">CATEGORY \ </span><span class="alreadyCategory"></span></p>
                     <div class="btn-toolbar" role="toolbar">
                         <div class="btn-group" id="category">
                             <!--Volunteer/Permanent/Freelance/Contract-->
@@ -692,7 +692,7 @@
                         <!--</div>-->
                         <div class="division">
                             <div class="line l"></div>
-                            <span>codingirls</span>
+                            <span>CodinGirls</span>
                             <div class="line r"></div>
                         </div>
                         <div class="error"></div>
@@ -715,7 +715,7 @@
                                 <input id="register-password" class="form-control" type="password" placeholder="Password" name="password">
                                 <input id="password_confirmation" class="form-control" type="password" placeholder="Repeat Password" name="password_confirmation">
                                 <input id="verification_code" class="form-control" type="text" placeholder="verification code">
-                                <input id="getCode" type="button" value="获取验证码">
+                                <input id="getCode" type="button" value="Get Verification Code">
                                 <input id="btn-register" href="index.html" class="btn btn-default btn-register" type="submit" value="Create account" name="commit">
                             </form>
                         </div>
@@ -729,9 +729,9 @@
                                 <input id="forget-email" class="form-control" type="text" placeholder="Email" name="email">
                                 <input id="forget-password" class="form-control" type="password" placeholder="Set New Password" name="password">
                                 <input id="forget_password_conf1irmation" class="form-control" type="password" placeholder="Repeat Password" name="password_confirmation">
-                                <input id="forget_verification_code" class="form-control" type="text" placeholder="verification code">
-                                <input id="forget_getCode" type="button" value="获取验证码">
-                                <input id="forget_btn-register" href="index.html" class="btn btn-default btn-forget" type="submit" value="Confirm" name="commit">
+                                <input id="forget_verification_code" class="form-control" type="text" placeholder="Verification Code">
+                                <input id="forget_getCode" type="button" value="Get Verification Code">
+                                <input id="forget_btn-register" href="index.html" class="btn btn-default btn-forget" type="submit" value="CONFIRM" name="commit">
                             </form>
                         </div>
                     </div>
