--- a/self.html
+++ b/self.html
@@ -82,7 +82,7 @@
                         <div class="navbar-collapse collapse">
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="index.html">HOME</a></li>
-                                <li><a class="exit" href="index.html">退出登录</a></li>
+                                <li><a class="exit" href="index.html">LOG OUT</a></li>
                             </ul>
                         </div>
                     </div>
@@ -91,20 +91,6 @@
         </div>
     </div>
 </header>
-<!--<header id="header_area" class="container">-->
-    <!--<div class="container">-->
-        <!--<div class="row">-->
-            <!--<div class="col-sm-8 col-md-8">-->
-                <!--<div class="logo">-->
-                    <!--<h2><a href="#" id="to-all-jobs">Personal Center</a></h2>-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--<div class="col-sm-4 col-md-4">-->
-                <!--<a class="exit" href="index.html">退出登录</a>-->
-            <!--</div>-->
-        <!--</div>-->
-    <!--</div>-->
-<!--</header>-->
 
 <!--个人中心管理，重点体现用户个人信息，用户发布的职位和发布职位功能-->
 <div class="container main">
@@ -113,7 +99,7 @@
             <div class="left-user">
                 <div class="head-portrait"><img src="images/1.jpg" alt=""></div>
                 <p id="p-username">
-                    <!--用户名 : <span>Deepspace</span>-->
+
                 </p>
             </div>
             <div>
@@ -160,20 +146,7 @@
                 <div id="alreadyJobs" class="tab-pane fade">
                         <div class="row">
                             <div id="myselfJob" class="col-lg-12 col-md-12 col-sm-12">
-                                <!--<div class="my-apply-jobs">-->
-                                    <!--<p>-->
-                                        <!--<span class="apply-start-date">发布时间: <span>2017.8.8</span></span>-->
-                                        <!--<span class="apply-end-date">~ &nbsp;&nbsp;截止时间: <span>2017.9.8</span></span>-->
-                                    <!--</p>-->
-                                    <!--<p>-->
-                                        <!--<span class="apply-job-name">职位名称: <span>前端开发工程师</span></span>-->
-                                        <!--<span class="apply-job-company">公司: <span>ThoughtWorks</span></span>-->
-                                        <!--<span class="apply-job-address">地址: <span>湖北武汉</span></span>-->
-                                    <!--</p>-->
-                                    <!--<p class="apply-job-order">职位要求: H5/CSS3/JavaScript</p>-->
-                                    <!--<p class="apply-job-delete"><a href="#">删除</a></p>-->
-                                    <!--<p></p>-->
-                                <!--</div>-->
+
                             </div>
                         </div>
                     </div>
@@ -324,7 +297,10 @@
     </div>
 </div>
 
-
+<div id="toTop">
+    <span class="glyphicon glyphicon-menu-up"></span>
+</div>
+<script type="text/javascript" src="public/"></script>
 <script type="text/javascript" src="js/jquery.min.js"></script>
 <script type="text/javascript" src="bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/self/self.js"></script>
